--- a/app/src/main/res/layout/bottom_menu.xml
+++ b/app/src/main/res/layout/bottom_menu.xml
@@ -29,6 +29,7 @@
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/chat"
+            android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
