--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -74,16 +74,20 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
 
-                        <ImageView
+                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                             android:id="@+id/tag"
-                            android:layout_width="50dp"
-                            android:layout_height="50dp"
-                            android:layout_gravity="center_vertical"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
                             android:layout_marginStart="5dp"
                             android:clickable="true"
-                            android:foreground="?android:attr/selectableItemBackground"
-                            android:padding="12dp"
-                            app:srcCompat="@drawable/tag" />
+                            android:elevation="0dp"
+                            android:src="@drawable/tag"
+                            app:backgroundTint="#BCBCBC"
+                            app:borderWidth="0dp"
+                            app:elevation="0dp"
+                            app:fabCustomSize="35dp"
+                            app:maxImageSize="20dp"
+                            app:tint="#ffffff" />
 
                         <EditText
                             android:id="@+id/edit"
@@ -97,9 +101,10 @@
                             android:inputType="textMultiLine"
                             android:maxLines="4"
                             android:minHeight="40dp"
+                            android:paddingStart="10dp"
                             android:paddingTop="5dp"
                             android:paddingBottom="5dp"
-                            android:textSize="16sp" />
+                            android:textSize="15sp" />
 
                         <ImageView
                             android:id="@+id/send"
@@ -117,6 +122,7 @@
             </RelativeLayout>
 
             <LinearLayout
+                android:id="@+id/tag_view"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
                 android:orientation="vertical"
@@ -144,33 +150,37 @@
                     app:strokeColor="#CFCFCF"
                     app:strokeWidth="0.5dp">
 
-                    <GridView
+                    <androidx.recyclerview.widget.RecyclerView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
                 </com.google.android.material.card.MaterialCardView>
 
                 <RelativeLayout
+                    android:id="@+id/add_tag"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="end"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="20dp"
-                    android:padding="10dp">
+                    android:clickable="true"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    android:padding="6dp">
 
                     <TextView
                         android:id="@+id/textView2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
+                        android:layout_marginStart="4dp"
                         android:fontFamily="@font/pd_light"
                         android:text="태그 추가"
                         android:textColor="#2E2E2E"
-                        android:textSize="16sp" />
+                        android:textSize="14sp" />
 
                     <ImageView
                         android:id="@+id/imageView6"
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
+                        android:layout_width="22dp"
+                        android:layout_height="22dp"
                         android:layout_centerVertical="true"
                         android:layout_gravity="end"
                         android:layout_marginTop="5dp"
