--- a/app/src/main/res/layout/bottom_menu.xml
+++ b/app/src/main/res/layout/bottom_menu.xml
@@ -37,6 +37,7 @@
             android:backgroundTint="#232323"
             android:clickable="true"
             android:elevation="2dp"
+            android:layout_marginTop="10dp"
             app:backgroundTint="#FFFFFF"
             app:borderWidth="3dp"
             app:elevation="2dp"
@@ -69,7 +70,6 @@
                 android:layout_marginEnd="50dp"
                 android:layout_weight="1"
                 android:clickable="true"
-                android:foreground="?android:attr/selectableItemBackground"
                 android:padding="20dp"
                 android:src="@drawable/home">
 
@@ -82,9 +82,10 @@
                 android:layout_height="60dp"
                 android:layout_weight="1"
                 android:clickable="true"
-                android:foreground="?android:attr/selectableItemBackground"
                 android:padding="20dp"
-                android:src="@drawable/profile"></ImageView>
+                android:src="@drawable/profile">
+
+            </ImageView>
 
         </LinearLayout>
 
